--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebCraft Studio | Jasa Pembuatan Website Elegant</title>
+    <title>ArjaWeb | Jasa Pembuatan Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -240,7 +240,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
                     <h1 class="text-2xl font-bold elegant-heading text-gray-800">
-                        <span class="text-blue-600">Web</span>Craft<span class="text-emerald-500">Studio</span>
+                        <span class="text-blue-600">Arja</span>Web<span class="text-emerald-500"></span>
                     </h1>
                 </div>
                 
@@ -254,7 +254,7 @@
                 
                 <div class="flex items-center space-x-4">
                     <button class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full font-medium transition-all duration-300 soft-hover">
-                        <i class="fas fa-comments mr-2"></i>Konsultasi
+                        <i class="fas fa-comments mr-2">a href=""></i>Konsultasi
                     </button>
                     <button class="text-gray-600 md:hidden">
                         <i class="fas fa-bars text-xl"></i>
