--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 
                 <div class="flex items-center space-x-4">
                     <button class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full font-medium transition-all duration-300 soft-hover">
-                        <i class="fas fa-comments mr-2">a href=""></i>Konsultasi
+                        <i class="fas fa-comments mr-2"></i>WA 0858-8585-0204
                     </button>
                     <button class="text-gray-600 md:hidden">
                         <i class="fas fa-bars text-xl"></i>
@@ -435,7 +435,7 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-bold elegant-heading text-gray-800 mb-4">
-                        <span class="text-blue-600">Web</span>Craft<span class="text-emerald-500">Studio</span>
+                        <span class="text-blue-600">Arja</span>Web<span class="text-emerald-500"></span>
                     </h3>
                     <p class="text-gray-600 mb-4 leading-relaxed">
                         Menciptakan website yang tidak hanya indah, tetapi juga bermakna dan fungsional.
@@ -485,7 +485,7 @@
             
             <div class="border-t border-gray-200 mt-8 pt-8 text-center">
                 <p class="text-gray-500">
-                    © 2024 WebCraft Studio. All rights reserved. Crafted with <i class="fas fa-heart text-red-400"></i>
+                    © 2024 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh<i class="fas fa-heart text-red-400">Orilix.net</i>
                 </p>
             </div>
         </div>
