--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             
             <div class="border-t border-gray-200 mt-8 pt-8 text-center">
                 <p class="text-gray-500">
-                    © 2024 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh<i class="fas fa-heart text-red-400">Orilix.net</i>
+                    © 2024 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh><i class="fas fa-heart text-red-400">Orilix.net</i>
                 </p>
             </div>
         </div>
