--- a/index.html
+++ b/index.html
@@ -476,16 +476,19 @@
                 <div>
                     <h4 class="text-lg font-semibold text-gray-800 mb-4">Kontak</h4>
                     <div class="space-y-2 text-gray-600">
-                        <p><i class="fas fa-envelope mr-2"></i>hello@webcraftstudio.com</p>
-                        <p><i class="fas fa-phone mr-2"></i>+62 812 3456 7890</p>
-                        <p><i class="fas fa-map-marker-alt mr-2"></i>Jakarta, Indonesia</p>
+                        <p><i class="fas fa-envelope mr-2"></i>arjawebstudio@gmail.com</p>
+                        <p><i class="fas fa-phone mr-2"></i>+62 858 8585 0204</p>
+                        <p><i class="fas fa-map-marker-alt mr-2"></i>ArjaWeb
+Jl. GunungLangit,
+Kec. Kalibening, Kota Banjarnegara
+Jawa Tengah 53458</p>
                     </div>
                 </div>
             </div>
             
             <div class="border-t border-gray-200 mt-8 pt-8 text-center">
                 <p class="text-gray-500">
-                    © 2024 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh><i class="fas fa-heart text-red-400">Orilix.net</i>
+                    © 2025 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh ORILIX.NET<i class="fas fa-heart text-red-400"></i>
                 </p>
             </div>
         </div>
