--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <div>
                     <h4 class="text-lg font-semibold text-gray-800 mb-4">Tautan</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Tentang Kami</a></li>
+                        <li><a href="https://orilix.net" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Course Coding</a></li>
                         <li><a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Portfolio</a></li>
                     </ul>
                 </div>
@@ -485,7 +485,7 @@ Jawa Tengah 53458</p>
             
             <div class="border-t border-gray-200 mt-8 pt-8 text-center">
                 <p class="text-gray-500">
-                    <i>© 2025 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh ORILIX.NET><i class="fas fa-heart text-red-400"></i>
+                    <i>© 2025 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh www.orilix.net<i class="fas fa-heart text-red-400"></i>
                 </p>
             </div>
         </div>
