--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ Jawa Tengah 53458</p>
             
             <div class="border-t border-gray-200 mt-8 pt-8 text-center">
                 <p class="text-gray-500">
-                    <i>© 2025 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh www.orilix.net<i class="fas fa-heart text-red-400"></i>
+                    © 2025 ArjaWeb. All rights reserved. Dibuat dengan cinta oleh www.orilix.net<i class="fas fa-heart text-red-400"></i>
                 </p>
             </div>
         </div>
