--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     <h4 class="text-lg font-semibold text-gray-800 mb-4">Tautan</h4>
                     <ul class="space-y-2">
                         <li><a href="https://orilix.net" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Course Coding</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Portfolio</a></li>
+                        <li><a href="https://paket.arjaweb.orilix.net/" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Paket Layanan</a></li>
                     </ul>
                 </div>
                 
